# local-weather-station

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  setup.cfg  wsgi.py
.github/workflows/: main.yml
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
frontend/src/components/: HourlyRangeChart.test.tsx  HourlyRangeChart.tsx  RainTracker.test.tsx  RainTracker.tsx  TemperatureChart.test.tsx  TemperatureChart.tsx  WindRose.test.tsx  WindRose.tsx
local_weather_server/models/: database.py
local_weather_server/schema/sqlite/: weather_data.sql  weather_station.sql
local_weather_server/server/: app.py
local_weather_server/server/servlets/: api.py  default.py
tests/models/: database_test.py
tests/server/: app_test.py  conftest.py
tests/server/servlets/: api_test.py  default_test.py
