[metadata]
name = local_weather_station
version = 0.0.0
description = A web service for monitoring a locally-available weather station
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ddellspe/local-weather-station
author = David Dellsperger
author_email = david.dellsperger@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    flask
    identify
    pyyaml
    tzdata
python_requires = >=3.13

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    local-weather-server = local_weather_server.server.app:main

[options.package_data]
local_weather_server =
    schema/*/*.sql
local_weather_server.server =
    static/*
    static/*/*

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[coverage:report]
omit =
    wsgi.py

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
